Fixing gap in user menu

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -165,7 +165,6 @@ nav#main-nav a:hover {
     display: none;
     position: absolute;
     top: 100%;
-    top: 42px;
     right: 0;
     background: #222;
     padding: 20px;
